# mpcontroller

./: .gitignore  racecar.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
mpcontroller/: __init__.py  _api.py  config.py  exceptions.py  global_state.py  ipc.py  util.py  worker.py
tests/: conftest.py  test_communications.py  test_mainloop_thread.py  test_mainthread_interruption.py  test_message.py  test_methodmarker.py  test_pickle_compat.py  test_pipe_reader.py  test_signal.py  test_worker.py  test_worker_control.py  test_worker_exceptions.py  test_worker_messaging.py  test_worker_runtime.py  test_worker_scheduling.py  test_worker_status.py
