[metadata]
name = mpcontroller
version = 0.0.1
description = A small library for controlling multiprocessing.Process objects.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Pepin
url = https://github.com/peffjepin/mpcontroller
license = MIT
license_file = LICENSE
platforms =
    linux
    windows
    macos
classifiers = Programming Language :: Python :: 3 :: Only

[options]
packages = mpcontroller
python_requires = >= 3.7
include_package_data = yes
zip_safe = no

[options.extras_require]
testing =
    pytest
    tox
